@@ -1,3 +1,9 @@
+2005-08-05  Daiki Ueno <ueno@unixuser.org>
+
+	* mml2015.el (mml2015-pgg-sign): Make sure micalg is correct.
+
+	* pgg-parse.el (pgg-parse-hash-algorithm-alist): Add SHA-2.
+
 2005-08-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mm-bodies.el (mm-encode-body): Use coding system rather than
